# EASYMOBILE

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: python-package.yml  python-publish.yml
easyb2b/: __init__.py  airtime_api.py  api.py  base.py  cable_api.py  data_api.py  exceptions.py  mocked.py  utils.py
easymobile/: __init__.py  airtime_api.py  base.py  cable_api.py  client.py  data_api.py  mocked.py  utils.py
tests/: test_easyairtime.py  test_easybase.py  test_easycable.py  test_easydata.py  test_easymobile_client.py
