[tool.poetry]
name = "easymobile"
description = "EASYMOBILE Python client library"
authors = ["Ephraim <ephraimakolo2017@gmail.com>"]
license = "MIT"
readme = {file = "README.md", content-type = "text/markdown"}
homepage = "https://github.com/jake-ephraim/EASYMOBILE"
repository = "https://github.com/jake-ephraim/EASYMOBILE"
keywords = ["EASYMOBILE", "easymobile"]
classifiers = [
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  'Natural Language :: English',
]

[tool.setuptools_scm]
write_to = "easymobile/version.py"
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"

[build-system]
requires = ["poetry-core", "setuptools", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
requests = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
pytest-asyncio = "*"

[tool.pytest.ini_options]
addopts = [
    "--cov=.",
    "--cov-report",
    "term-missing"
]
filterwarnings = [
    "error::DeprecationWarning",
    "error::PendingDeprecationWarning",
    "ignore:pkg_resources is deprecated as an API:DeprecationWarning"
]

[tool.black]
line-length = 127

[tool.isort]
profile = "black"
line_length = 127

[tool.mypy]
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_calls = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_return_any = true
no_implicit_optional = true
strict_optional = true
ignore_missing_imports = true

[tool.coverage.run]
omit = [
    "*__init__.py",
    "tests/*",
    "venv/*",
    ".venv/*",
    "env/*",
    "setup.py",
]
